[gd_scene load_steps=6 format=2]

[ext_resource path="res://weapons/player_shotty/player_shotty.gd" type="Script" id=1]
[ext_resource path="res://weapons/player_shotty/shotgun.png" type="Texture" id=2]
[ext_resource path="res://weapons/player_shotty/SgPallet.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "shoot"
length = 0.21
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0534081, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 55.006, -1.823 ), Vector2( 51.882, -1.823 ), Vector2( 55.006, -1.823 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0522721, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.98201, 1.5388 ), Vector2( 1.76419, 1.5388 ), Vector2( 1.98201, 1.5388 ) ]
}

[node name="PlayerShotty" type="Node2D"]
position = Vector2( 55.006, -1.823 )
scale = Vector2( 1.98201, 1.5388 )
script = ExtResource( 1 )
pallet_scene = ExtResource( 3 )
pallets = NodePath("pallets_spawn")

[node name="pallets_spawn" type="Node2D" parent="."]
position = Vector2( 16.5015, 0.204953 )

[node name="pallet" type="Node2D" parent="pallets_spawn"]
position = Vector2( -0.0522537, -2.59833 )
rotation = -0.342192

[node name="icon" type="Sprite" parent="pallets_spawn/pallet"]
visible = false
position = Vector2( 15.9907, -0.365875 )
scale = Vector2( 0.51418, -0.0368499 )
texture = ExtResource( 4 )

[node name="pallet2" type="Node2D" parent="pallets_spawn"]
position = Vector2( -0.0358238, -1.66562 )
rotation = -0.149367

[node name="icon" type="Sprite" parent="pallets_spawn/pallet2"]
visible = false
position = Vector2( 15.9907, -0.365875 )
scale = Vector2( 0.51418, -0.0368499 )
texture = ExtResource( 4 )

[node name="pallet3" type="Node2D" parent="pallets_spawn"]
position = Vector2( -0.0313303, 0.370953 )

[node name="icon" type="Sprite" parent="pallets_spawn/pallet3"]
visible = false
position = Vector2( 15.9907, -0.365875 )
scale = Vector2( 0.51418, -0.0368499 )
texture = ExtResource( 4 )

[node name="pallet4" type="Node2D" parent="pallets_spawn"]
position = Vector2( -0.0625041, 1.71651 )
rotation = 0.12468

[node name="icon" type="Sprite" parent="pallets_spawn/pallet4"]
visible = false
position = Vector2( 15.9907, -0.365875 )
scale = Vector2( 0.51418, -0.0368499 )
texture = ExtResource( 4 )

[node name="pallet5" type="Node2D" parent="pallets_spawn"]
position = Vector2( 0.0603104, 3.65128 )
rotation = 0.230201

[node name="icon" type="Sprite" parent="pallets_spawn/pallet5"]
visible = false
position = Vector2( 15.9907, -0.365875 )
scale = Vector2( 0.51418, -0.0368499 )
texture = ExtResource( 4 )

[node name="shotgun_sprite" type="Sprite" parent="."]
position = Vector2( 2.503, 0 )
texture = ExtResource( 2 )

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="shot_animation" type="AnimationPlayer" parent="."]
anims/shoot = SubResource( 1 )

[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
